[Ledger] Receipts badge no longer changes size on smaller viewports (#6567)

--- a/app/assets/stylesheets/components/_transactions.scss
+++ b/app/assets/stylesheets/components/_transactions.scss
@@ -68,7 +68,7 @@ html[data-dark='true'] {
     align-items: center;
   }
 
-  span:not(.badge):first-of-type {
+  span:not(.badge):not(.list-badge):first-of-type {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
